methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:106: error: not found: value lignes
  lignes(rouge);
  ^